--- a/views/crud.ejs
+++ b/views/crud.ejs
@@ -36,7 +36,7 @@
 
 
 
-<script defer src="/public/javascripts/crud.js"></script>
+<script src="/public/javascripts/crud.js"></script>
 
 
 <!-- <% include ./partials/footer.ejs %> -->
