--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 
 <head>
   <title>Express static server</title>
-  <script src='/public/vendor/jquery-3_3_1_min_js.js'></script>
+  <script async src='/public/vendor/jquery-3_3_1_min_js.js'></script>
   <link rel="stylesheet" href="/public/vendor/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="/public/stylesheets/style.css" type="text/css">
 
